Update .gitignore to include sample outputs

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ data/chroma_db/
 data/chroma_db_parallel/
 data/lakehouse/
 
-# Generated outputs (can recreate)
-outputs/*.json
-outputs/charts/*.png
-data/processed/*.csv
+# Generated outputs (adding back)
+#outputs/*.json
+#outputs/charts/*.png
+#data/processed/*.csv
